==> Sanya-123/ESP32_meteoControlStation/main/nrf24l01.c <==
#include "RF24.h"
#include "esp_log.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#define HIGH 1
#define LOW  0

void csn(uint8_t level)
{
//    HAL_GPIO_WritePin(CSN_GPIO_Port, CSN_Pin, level);
    //delay_us(5);
    gpio_set_level(hspi1.cs_io_num, level);
}

void ce(uint8_t level)
{
//    HAL_GPIO_WritePin(CE_GPIO_Port, CE_Pin, level);
    gpio_set_level(hspi1.ce_io_num, level);
}

uint8_t read_register(uint8_t reg)
{
    uint8_t addr = R_REGISTER | (REGISTER_MASK & reg);
    uint8_t dt = 0;

//    csn(LOW);
//    HAL_SPI_TransmitReceive(&hspi1, &addr, &dt, 1, 100);
//    HAL_SPI_TransmitReceive(&hspi1, (uint8_t*)0xff, &dt, 1, 100);
//    csn(HIGH);

    csn(LOW);
    esp_err_t ret;
    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = 2*8,
    };
    t.tx_data[0] = addr;
    t.tx_data[1] = 0xff;

//    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_read_reg: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return 0;
    }

    return t.rx_data[1];
}

uint8_t write_registerMy(uint8_t reg, const uint8_t* buf, uint8_t len)
{
    uint8_t status = 0;
    uint8_t addr = W_REGISTER | (REGISTER_MASK & reg);

//    csn(LOW);
//    HAL_SPI_TransmitReceive(&hspi1, &addr, &status, 1, 100);
//    //HAL_SPI_Transmit_IT(&hspi1, (uint8_t*)buf, len);
//    NRF_SPI_Transmit(&hspi1, (uint8_t*)buf, len);
//    csn(HIGH);
    ESP_LOGI("nrf", "write_registerMy len=%d", (1 + len)*8);//TODO
    csn(LOW);
    esp_err_t ret;
//    spi_transaction_t t = {
//        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
//        .length = (1 + len)*8,
////        .tx_buffer = &cmd,
////        .rx_buffer = res
//    };
//    t.tx_data[0] = addr;
//    memcpy(&(t.tx_data[1]), buf, len);

////    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
//    ret = spi_device_transmit(hspi1.spi_dev, &t);

    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = (1 + 0)*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
    t.tx_data[0] = addr;
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    status = t.rx_data[0];
    memcpy(&(t.tx_data[0]), buf, len-1);

    t.length = len*8 - 8;
    ret = spi_device_transmit(hspi1.spi_dev, &t);

    t.tx_data[0] = buf[len - 1];
    t.length = 8;
    ret = spi_device_transmit(hspi1.spi_dev, &t);

    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return 0;
    }



    return status;
}

uint8_t write_register(uint8_t reg, uint8_t value)
{
    uint8_t status = 0;
    uint8_t addr = W_REGISTER | (REGISTER_MASK & reg);
//    csn(LOW);
//    HAL_SPI_TransmitReceive(&hspi1, &addr, &status, 1, 100);
//    //HAL_SPI_Transmit_IT(&hspi1, &value, 1);
//    NRF_SPI_Transmit(&hspi1, &value, 1);
//    csn(HIGH);
    csn(LOW);
    esp_err_t ret;
    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = 2*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
    t.tx_data[0] = addr;
    t.tx_data[1] = value;

//    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return 0;
    }

    status = t.rx_data[0];

    return status;
}

uint8_t write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
    uint8_t status = 0;
    const uint8_t* current = (const uint8_t*)buf;
    uint8_t addr = writeType;

    data_len = rf24_min(data_len, payload_size);
    uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

//    csn(LOW);
//    HAL_SPI_TransmitReceive(&hspi1, &addr, &status, 1, 100);
//    //HAL_SPI_Transmit_IT(&hspi1, (uint8_t*)current, data_len);
//    NRF_SPI_Transmit(&hspi1, (uint8_t*)current, data_len);

//    while(blank_len--)
//    {
//        uint8_t empt = 0;
//        //HAL_SPI_Transmit_IT(&hspi1, &empt, 1);
//        NRF_SPI_Transmit(&hspi1, &empt, 1);
//    }

//    csn(HIGH);

    ESP_LOGI("nrf", "write_payload len=%d", (blank_len + data_len + 1)*8);//TODO
    esp_err_t ret;
    csn(LOW);
//    spi_transaction_t t = {
//        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
//        .length = (blank_len + data_len + 1)*8,
////        .tx_buffer = &cmd,
////        .rx_buffer = res
//    };
//    t.tx_data[0] = addr;
////    t.tx_data[1] = value;
//    memcpy(&(t.tx_data[1]), current, data_len);

////    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
//    ret = spi_device_transmit(hspi1.spi_dev, &t);

    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = (1 + 0)*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
//    int lenP = (blank_len + data_len)*8;
    t.tx_data[0] = addr;
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    status = t.rx_data[0];

    memcpy(&(t.tx_data[0]), current, 4);

    t.length = 4*8;
    ret = spi_device_transmit(hspi1.spi_dev, &t);

    memcpy(&(t.tx_data[0]), current + 4, 4);

    t.length = 4*8;
    ret = spi_device_transmit(hspi1.spi_dev, &t);


    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return 0;
    }

    return status;
}

uint8_t read_payload(void* buf, uint8_t data_len)
{
    uint8_t status = 0;
    uint8_t* current = (uint8_t*)buf;

    if(data_len > payload_size)
    {
        data_len = payload_size;
    }

    uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

    uint8_t addr = R_RX_PAYLOAD;
//    csn(LOW);
//    //HAL_SPI_Transmit_IT(&hspi1, &addr, 1);
//    NRF_SPI_Transmit(&hspi1, &addr, 1);
//    HAL_SPI_Receive(&hspi1, (uint8_t*)current, data_len, 100);

//    while(blank_len--)
//    {
//        uint8_t empt = 0;
//        HAL_SPI_Receive(&hspi1, &empt, 1, 100);
//    }

//    csn(HIGH);
    csn(LOW);

    ESP_LOGI("nrf", "read_payload len=%d", (blank_len + data_len + 1)*8);
    esp_err_t ret;
//    spi_transaction_t t = {
//        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
//        .length = (blank_len + data_len + 1)*8,
////        .tx_buffer = &cmd,
////        .rx_buffer = res
//    };
//    t.tx_data[0] = addr;
////    t.tx_data[1] = value;
////    memcpy(&(t.tx_data[1]), current, data_len);

////    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
//    ret = spi_device_transmit(hspi1.spi_dev, &t);

    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = (1 + 0)*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
//    int lenP = (blank_len + data_len)*8;
    t.tx_data[0] = addr;
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    status = t.rx_data[0];

//    memcpy(&(t.tx_data[0]), current, 4);

    t.length = 4*8;
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    memcpy(current, &(t.rx_data[0]), 4);

//    memcpy(&(t.tx_data[0]), current + 4, 4);

    t.length = 4*8;
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    memcpy(current+4, &(t.rx_data[0]), 4);


    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return 0;
    }

//    memcpy(current, &(t.rx_data[1]), data_len);

    return status;
}

uint8_t spiTrans(uint8_t cmd)
{
    uint8_t status = 0;
//    csn(LOW);
//    HAL_SPI_TransmitReceive(&hspi1, &cmd, &status, 1, 100);
//    csn(HIGH);
    csn(LOW);
    esp_err_t ret;
    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = 1*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
    t.tx_data[0] = cmd;

//    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return 0;
    }
    status = t.rx_data[0];
    return status;
}

uint8_t NRF_Init(rf24_bus_cfg_t bus)
{

    ESP_LOGV("NRF", "rf24_init");

    //RF24_CHECK(bus != NULL, "invalid bus config", ESP_ERR_INVALID_ARG);
    //RF24_CHECK(GPIO_IS_VALID_OUTPUT_GPIO(bus.ce_io_num), "invalid CE pin", ESP_ERR_INVALID_ARG);
    //RF24_CHECK(handle != NULL, "invalid output handle", ESP_ERR_INVALID_ARG);

    esp_err_t ret = ESP_OK;

//    struct rf24_dev_t *rf_dev = malloc(sizeof(struct rf24_dev_t));
//    if (rf_dev == NULL) {
//        ESP_LOGW("NRF", "rf24_init: malloc failed");
//        ret = ESP_ERR_NO_MEM;
//        goto cleanup;
//    }

//    memset(rf_dev, 0, sizeof(struct rf24_dev_t));
//    rf_dev->bus_cfg = *bus_cfg;

    // Initialize bus if needed.
    if (bus.init_host) {
        spi_bus_config_t spi_buscfg = {
            .mosi_io_num = bus.mosi_io_num,
            .miso_io_num = bus.miso_io_num,
            .sclk_io_num = bus.sclk_io_num,
            .quadwp_io_num = -1,
            .quadhd_io_num = -1
        };

        ret = spi_bus_initialize(bus.spi_host, &spi_buscfg, 1);

        if (ret != ESP_OK) {
            ESP_LOGW("NRF", "rf24_init: spi_bus_initialize failed: %s", esp_err_to_name(ret));
//            goto cleanup;
        }
//        rf_dev->bus_initialized = true;
    }

    // Initialize device.
    spi_device_interface_config_t spi_devcfg={
        .clock_speed_hz = 8000000,
        .mode = 0,
        .spics_io_num = /*bus.cs_io_num*/-1,
        .queue_size = 8
    };

    ESP_LOGV("NRF", "rf24_init: spi_bus_add_device");
    spi_device_handle_t spi_dev;
    ret = spi_bus_add_device(bus.spi_host, &spi_devcfg, &spi_dev);

    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_init: spi_bus_add_device failed: %s", esp_err_to_name(ret));
//        goto cleanup;
        return 0;
    }
//    rf_dev->spi_dev = spi_dev;

    // Initialize GPIO for CE pin.
//    gpio_set_direction(bus.ce_io_num, GPIO_MODE_OUTPUT);
//    gpio_set_level(bus.ce_io_num, 0);
//    gpio_set_direction(bus.cs_io_num, GPIO_MODE_OUTPUT);
//    gpio_set_level(bus.cs_io_num, 1);

    gpio_config_t io_conf;
    //disable interrupt
    io_conf.intr_type = GPIO_PIN_INTR_DISABLE;
    //set as output mode
    io_conf.mode = GPIO_MODE_OUTPUT;
    //bit mask of the pins that you want to set,e.g.GPIO18/19
    io_conf.pin_bit_mask = (1ULL << bus.ce_io_num) | (1ULL << bus.cs_io_num);
    //disable pull-down mode
    io_conf.pull_down_en = 0;
    //disable pull-up mode
    io_conf.pull_up_en = 0;
    //configure GPIO with the given settings
    gpio_config(&io_conf);

    gpio_set_level(bus.ce_io_num, 0);
    gpio_set_level(bus.cs_io_num, 1);

//    *handle = rf_dev;
    bus.spi_dev = spi_dev;
    hspi1 = bus;
//    return ret;


    uint8_t setup = 0;
    p_variant = false;
    payload_size = 8;
    dynamic_payloads_enabled = false;
    addr_width = 5;
    pipe0_reading_address[0] = 0;

    ce(LOW);
    csn(HIGH);
//    HAL_Delay(5);
    vTaskDelay(5/portTICK_RATE_MS);

    write_register(NRF_CONFIG, 0x0C); // Reset NRF_CONFIG and enable 16-bit CRC.
    setRetries(0, 0);
    setPALevel(RF24_PA_MAX); // Reset value is MAX

    if(setDataRate(RF24_250KBPS)) // check for connected module and if this is a p nRF24l01 variant
    {
        p_variant = true;
    }

    setup = read_register(RF_SETUP);
    setDataRate(RF24_250KBPS); // Then set the data rate to the slowest (and most reliable) speed supported by all hardware.

    // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
    toggle_features();
    write_register(FEATURE, 0);
    write_register(DYNPD, 0);
    dynamic_payloads_enabled = false;

    // Reset current status. Notice reset and flush is the last thing we do
    write_register(NRF_STATUS, (1 << RX_DR) | (1 << TX_DS) | (1 << MAX_RT));
    setChannel(19);
    flush_rx();
    flush_tx();
    powerUp(); //Power up by default when begin() is called
    write_register(NRF_CONFIG, (read_register(NRF_CONFIG)) & ~(1 << PRIM_RX));
    return (setup != 0 && setup != 0xff);
}

uint8_t getDynamicPayloadSize(void)
{
    uint8_t result = 0, addr;
//    csn(LOW);
    addr = R_RX_PL_WID;
//    HAL_SPI_TransmitReceive(&hspi1, &addr, &result, 1, 100);
//    HAL_SPI_TransmitReceive(&hspi1, (uint8_t*)0xff, &result, 1, 100);
//    csn(HIGH);
    csn(LOW);
    esp_err_t ret;
    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = 2*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
    t.tx_data[0] = addr;
    t.tx_data[1] = 0xff;

//    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return 0;
    }
    result = t.rx_data[0];


    if(result > 32)
    {
        flush_rx();
//        HAL_Delay(2);
        vTaskDelay(2/portTICK_RATE_MS);
        return 0;
    }

    return result;
}

void toggle_features(void)
{
    uint8_t addr = ACTIVATE;
//    csn(LOW);
//    //HAL_SPI_Transmit_IT(&hspi1, &addr, 1);
//    NRF_SPI_Transmit(&hspi1, &addr, 1);
//    //HAL_SPI_Transmit_IT(&hspi1, (uint8_t*)0x73, 1);
//    NRF_SPI_Transmit(&hspi1, (uint8_t*)0x73, 1);
//    csn(HIGH);
    csn(LOW);
    esp_err_t ret;
    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = 2*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
    t.tx_data[0] = addr;
    t.tx_data[1] = 0x73;

//    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return;
    }
}

void writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
    const uint8_t* current = (const uint8_t*)buf;
    uint8_t data_len = rf24_min(len, 32);
    uint8_t addr = W_ACK_PAYLOAD | (pipe & 0x07);
//    csn(LOW);
//    //HAL_SPI_Transmit_IT(&hspi1, &addr, 1);
//    NRF_SPI_Transmit(&hspi1, &addr, 1);
//    //HAL_SPI_Transmit_IT(&hspi1, (uint8_t*)current, data_len);
//    NRF_SPI_Transmit(&hspi1, (uint8_t*)current, data_len);
//    csn(HIGH);

    csn(LOW);
    ESP_LOGI("nrf", "writeAckPayload len=%d", (data_len + 1)*8);
    esp_err_t ret;
    spi_transaction_t t = {
        .flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA,
        .length = (data_len + 1)*8,
//        .tx_buffer = &cmd,
//        .rx_buffer = res
    };
    t.tx_data[0] = addr;
    memcpy(&(t.tx_data[1]), current, data_len);

//    ret = spi_device_polling_transmit(hspi1.spi_dev, &t);
    ret = spi_device_transmit(hspi1.spi_dev, &t);
    csn(HIGH);
    if (ret != ESP_OK) {
        ESP_LOGW("NRF", "rf24_cmd: spi_device_polling_transmit failed: %s", esp_err_to_name(ret));
        return;
    }
}
