==> zip1982b/robocar/Core/Src/nrf24l01.c <==
#include "nrf24l01.h"
#define DWT_CONTROL *(volatile unsigned long *)0xE0001000
#define SCB_DEMCR   *(volatile unsigned long *)0xE000EDFC
#define HIGH 1
#define LOW  0

void csn(uint8_t level)
{
	HAL_GPIO_WritePin(CSN_GPIO_Port, CSN_Pin, level);
	HAL_Delay(10);
}

void ce(uint8_t level)
{
	HAL_GPIO_WritePin(CE_GPIO_Port, CE_Pin, level);
}

uint8_t read_register(uint8_t reg)
{
	uint8_t addr = R_REGISTER | (REGISTER_MASK & reg);
	uint8_t dt = 0;

	csn(LOW);
	HAL_SPI_TransmitReceive(&hspi2, &addr, &dt, 1, 1000);
	HAL_SPI_TransmitReceive(&hspi2, (uint8_t*)0xff, &dt, 1, 1000);
	csn(HIGH);
	return dt;
}

uint8_t write_registerMy(uint8_t reg, const uint8_t* buf, uint8_t len)
{
	uint8_t status = 0;
	uint8_t addr = W_REGISTER | (REGISTER_MASK & reg);

	csn(LOW);
	HAL_SPI_TransmitReceive(&hspi2, &addr, &status, 1, 100);
	HAL_SPI_Transmit(&hspi2, (uint8_t*)buf, len, 100);
	csn(HIGH);
	return status;
}

uint8_t write_register(uint8_t reg, uint8_t value)
{
	uint8_t status = 0;
	uint8_t addr = W_REGISTER | (REGISTER_MASK & reg);
	csn(LOW);
	HAL_SPI_TransmitReceive(&hspi2, &addr, &status, 1, 100);
	HAL_SPI_Transmit(&hspi2, &value, 1, 1000);
	csn(HIGH);
	return status;
}

uint8_t write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
	uint8_t status = 0;
	const uint8_t* current = (const uint8_t*)buf;
	uint8_t addr = writeType;

	data_len = rf24_min(data_len, payload_size);
	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

	csn(LOW);
	HAL_SPI_TransmitReceive(&hspi2, &addr, &status, 1, 100);
	HAL_SPI_Transmit(&hspi2, (uint8_t*)current, data_len, 100);

	while(blank_len--)
	{
		uint8_t empt = 0;
		HAL_SPI_Transmit(&hspi2, &empt, 1, 100);
	}

	csn(HIGH);
	return status;
}

uint8_t read_payload(void* buf, uint8_t data_len)
{
	uint8_t status = 0;
	uint8_t* current = (uint8_t*)buf;

	if(data_len > payload_size)
	{
		data_len = payload_size;
	}

	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

	uint8_t addr = R_RX_PAYLOAD;
	csn(LOW);
	HAL_SPI_Transmit(&hspi2, &addr, 1, 100);
	HAL_SPI_Receive(&hspi2, (uint8_t*)current, data_len, 100);

	while(blank_len--)
	{
		uint8_t empt = 0;
		HAL_SPI_Receive(&hspi2, &empt, 1, 100);
	}

	csn(HIGH);
	return status;
}

uint8_t spiTrans(uint8_t cmd)
{
	uint8_t status = 0;
	csn(LOW);
	HAL_SPI_TransmitReceive(&hspi2, &cmd, &status, 1, 1000);
	csn(HIGH);
	return status;
}

uint8_t NRF_Init(void)
{
	uint8_t setup = 0;
	p_variant = false;
	payload_size = 32;
	dynamic_payloads_enabled = false;
	addr_width = 5;
	pipe0_reading_address[0] = 0;

	ce(LOW);
	csn(HIGH);
	HAL_Delay(5);

	write_register(NRF_CONFIG, 0x0C); // Reset NRF_CONFIG and enable 16-bit CRC.
	setRetries(5, 15);
	setPALevel(RF24_PA_MAX); // Reset value is MAX

	if(setDataRate(RF24_250KBPS)) // check for connected module and if this is a p nRF24l01 variant
	{
		p_variant = true;
	}

	setup = read_register(RF_SETUP);
	setDataRate(RF24_1MBPS); // Then set the data rate to the slowest (and most reliable) speed supported by all hardware.

	// Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
	toggle_features();
	write_register(FEATURE, 0);
	write_register(DYNPD, 0);
	dynamic_payloads_enabled = false;

	// Reset current status. Notice reset and flush is the last thing we do
	write_register(NRF_STATUS, (1 << RX_DR) | (1 << TX_DS) | (1 << MAX_RT));
	setChannel(76);
	flush_rx();
	flush_tx();
	powerUp(); //Power up by default when begin() is called
	write_register(NRF_CONFIG, (read_register(NRF_CONFIG)) & ~(1 << PRIM_RX));
	return (setup != 0 && setup != 0xff);
}

uint8_t getDynamicPayloadSize(void)
{
	uint8_t result = 0, addr;
	csn(LOW);
	addr = R_RX_PL_WID;
	HAL_SPI_TransmitReceive(&hspi2, &addr, &result, 1, 1000);
	HAL_SPI_TransmitReceive(&hspi2, (uint8_t*)0xff, &result, 1, 1000);
	csn(HIGH);

	if(result > 32)
	{
		flush_rx();
		HAL_Delay(2);
		return 0;
	}

	return result;
}

void toggle_features(void)
{
	uint8_t addr = ACTIVATE;
	csn(LOW);
	HAL_SPI_Transmit(&hspi2, &addr, 1, 1000);
	HAL_SPI_Transmit(&hspi2, (uint8_t*)0x73, 1, 1000);
	csn(HIGH);
}

void writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
	const uint8_t* current = (const uint8_t*)buf;
	uint8_t data_len = rf24_min(len, 32);
	uint8_t addr = W_ACK_PAYLOAD | (pipe & 0x07);
	csn(LOW);
	HAL_SPI_Transmit(&hspi2, &addr, 1, 1000);
	HAL_SPI_Transmit(&hspi2, (uint8_t*)current, data_len, 1000);
	csn(HIGH);
}
